gitops/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: pred-dev
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: pred-api
          image: ghcr.io/werockstar/go-gitops:9aba60288caadba399b0dadf4f21d86f489ddedc
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.5"
              memory: 256Mi
